adicionado menu lateral

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <nav>
+        <div class="topo">
             <div class="topo--container--1">
                 <img class="menu--icon" src="assets/icons/menu-icon.svg" alt="menu icone">
 
@@ -33,6 +33,28 @@
 
                 <div class="avatar"></div>
             </div>
-        </nav>
+        </div>
+
+        <div class="menu">
+            <nav>
+                <div class="botao--menu">
+                    <br/>
+                    <img src="assets/icons/home.svg" alt="botao home">
+                    <label class="nome--botao">Home</label>
+                </div>
+                <div class="botao--menu">
+                    <img src="assets/icons/shorts.svg" alt="botao shorts">
+                    <label class="nome--botao">Shorts</label>
+                </div>
+                <div class="botao--menu">
+                    <img src="assets/icons/subscriptions.svg" alt="botao subscriptions">
+                    <label class="nome--botao">Subscriptions</label>
+                </div>
+                <div class="botao--menu">
+                    <img src="assets/icons/library.svg" alt="botao library">
+                    <label class="nome--botao">Library</label>
+                </div>
+            </nav>
+        </div>
     </body>
 </html>
